--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,14 +65,20 @@
      "output_type": "stream",
      "text": [
       "Collecting sqlalchemy==1.3.9\n",
-      "  Using cached SQLAlchemy-1.3.9-cp312-cp312-linux_x86_64.whl\n",
+      "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m112.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25done\n",
+      "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
+      "  Building wheel for sqlalchemy (setup.py) ...done\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp312-cp312-linux_x86_64.whl size=1160111 sha256=3ab84b1e40e49884366c0e7d21f6c8131575236d545ae4033b3ee589714782c2\n",
+      "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/b3/1c/42/0e26b8d512adc6bce10ff71a05229366b4ccec641cd3b42111\n",
+      "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
       "  Attempting uninstall: sqlalchemy\n",
       "    Found existing installation: SQLAlchemy 2.0.37\n",
       "    Uninstalling SQLAlchemy-2.0.37:\n",
       "      Successfully uninstalled SQLAlchemy-2.0.37\n",
       "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "ipython-sql 0.5.0 requires sqlalchemy>=2.0, but you have sqlalchemy 1.3.9 which is incompatible.\n",
       "jupyterhub 5.2.1 requires SQLAlchemy>=1.4.1, but you have sqlalchemy 1.3.9 which is incompatible.\u001b[0m\u001b[31m\n",
       "\u001b[0mSuccessfully installed sqlalchemy-1.3.9\n"
      ]
@@ -93,19 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.12/site-packages (0.5.0)\n",
-      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (3.14.0)\n",
+      "Collecting ipython-sql\n",
+      "  Downloading ipython_sql-0.5.0-py3-none-any.whl.metadata (17 kB)\n",
+      "Collecting prettytable (from ipython-sql)\n",
+      "  Downloading prettytable-3.14.0-py3-none-any.whl.metadata (30 kB)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (8.31.0)\n",
       "Collecting sqlalchemy>=2.0 (from ipython-sql)\n",
-      "  Using cached SQLAlchemy-2.0.37-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
-      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (0.5.3)\n",
+      "  Downloading SQLAlchemy-2.0.37-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
+      "Collecting sqlparse (from ipython-sql)\n",
+      "  Downloading sqlparse-0.5.3-py3-none-any.whl.metadata (3.9 kB)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (1.17.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (0.2.0)\n",
       "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.12/site-packages (from sqlalchemy>=2.0->ipython-sql) (3.1.1)\n",
@@ -124,13 +133,17 @@
       "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (2.1.0)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (3.0.0)\n",
       "Requirement already satisfied: pure_eval in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n",
-      "Using cached SQLAlchemy-2.0.37-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
-      "Installing collected packages: sqlalchemy\n",
+      "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
+      "Downloading SQLAlchemy-2.0.37-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m81.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading prettytable-3.14.0-py3-none-any.whl (31 kB)\n",
+      "Downloading sqlparse-0.5.3-py3-none-any.whl (44 kB)\n",
+      "Installing collected packages: sqlparse, sqlalchemy, prettytable, ipython-sql\n",
       "  Attempting uninstall: sqlalchemy\n",
       "    Found existing installation: SQLAlchemy 1.3.9\n",
       "    Uninstalling SQLAlchemy-1.3.9:\n",
       "      Successfully uninstalled SQLAlchemy-1.3.9\n",
-      "Successfully installed sqlalchemy-2.0.37\n",
+      "Successfully installed ipython-sql-0.5.0 prettytable-3.14.0 sqlalchemy-2.0.37 sqlparse-0.5.3\n",
       "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.12/site-packages (0.5.0)\n",
       "Requirement already satisfied: prettytable in /opt/conda/lib/python3.12/site-packages (3.14.0)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (8.31.0)\n",
@@ -164,18 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql"
    ]
@@ -898,50 +902,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "UsageError: Line magic function `%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Landing_Outcome</th>\n",
-       "            <th>Count</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Success (drone ship)</td>\n",
-       "            <td>5</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Success (ground pad)</td>\n",
-       "            <td>3</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Success (drone ship)', 5), ('Success (ground pad)', 3)]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT landing_outcome, count(landing_outcome) AS \"Count\" FROM SPACEXTABLE WHERE (landing_outcome) LIKE '%success%' and DATE BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY landing_outcome ORDER BY count(landing_outcome) DESC;"
+    "%sql SELECT landing_outcome, count(landing_outcome) AS \"Count\" FROM SPACEXTABLE WHERE (landing_outcome) LIKE '%failure%' and DATE BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY landing_outcome ORDER BY count(landing_outcome) DESC;"
    ]
   },
   {
